--- a/web/assets/css/responsive.css
+++ b/web/assets/css/responsive.css
@@ -1,6 +1,5 @@
 @media screen and (max-width: 736px) {
 	.content, body, html {
-		box-sizing: border-box;
 		max-width: 100%;
 	}
 
@@ -8,6 +7,10 @@
 		margin-left: 0;
 		margin-right: 0;
 		margin-bottom: 0;
+	}
+
+	.top-info-container {
+		display: block;
 	}
 
 	.carousel-top {
@@ -24,23 +27,23 @@
 	}
 
 	.slide1 {
-		background-image: url("/assets/img/top-carousel/visuel_1.jpg");
+		background-image: url("../img/top-carousel/visuel_1.jpg");
 	}
 
 	.slide2 {
-		background-image: url("/assets/img/top-carousel/visuel_2.jpg");
+		background-image: url("../img/top-carousel/visuel_2.jpg");
 	}
 
 	.slide3 {
-		background-image: url("/assets/img/top-carousel/visuel_3.jpg");
+		background-image: url("../img/top-carousel/visuel_3.jpg");
 	}
 
 	.slide4 {
-		background-image: url("/assets/img/top-carousel/visuel_4.jpg");
+		background-image: url("../img/top-carousel/visuel_4.jpg");
 	}
 
 	.slide5 {
-		background-image: url("/assets/img/top-carousel/visuel_5.jpg");
+		background-image: url("../img/top-carousel/visuel_5.jpg");
 	}
 
 	.slide-son {
@@ -59,8 +62,7 @@
 	}
 
 	.carousel-top .slick-dots {
-		left: 84px;
-		top: 455px;
+		bottom: -60px;
 	}
 
 	.main-menu, .red-square {
@@ -84,26 +86,28 @@
 	}
 
 	.slide-son {
-		background-image: url("/assets/img/responsive/contour_texte.png");
+		background-image: url("../img/responsive/contour_texte.png");
 		background-size: contain;
 		background-repeat: no-repeat;
 		background-position: 1px 1px;
 		width: 75%;
     	height: 57%;
 		margin: auto;
-		margin-top: 148px;
+		margin-top: 22%;
 	}
 
 	.slide-son h1 {
 		line-height: 50px;
 		margin-top: 20px;
 		font-size: 46px;
+		max-width: 330px;
 	}
 
 	.slide-son p {
 		font-size: 16px;
 		letter-spacing: 1px;
 		width: 100%;
+		max-width: 330px;
 	}
 
 	.slide {
@@ -125,7 +129,6 @@
 	}
 
 	.top-info {
-		background-image: url("/assets/img/background_bleu_clair_resp.png");
 		background-size: cover;
 		background-position: 0 -64px;
 		height: 1215px;
@@ -169,13 +172,14 @@
 	.top-info-slide img {
 		margin-left: auto;
 		margin-right: auto;
-		margin-bottom: 20px;
 	}
 
 	.top-info-slide ul {
 		margin-left: auto;
 		margin-right: auto;
-		width: 330px;
+		width: 320px;
+		padding: 0;
+		padding-left: 30px;
 	}
 
 	.top-info-slide li {
@@ -194,11 +198,17 @@
 
 	.middle-info {
 		width: 100%;
+		height: 750px;
 	}
 
 	.middle-info-upper {
 		margin-left: 31px;
 		margin-right: 31px;
+	}
+
+	.middle-info-img {
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 	.middle-info-upper h1 {
@@ -275,13 +285,13 @@
 	}
 
 	.bottom-contact {
-		background-image: url("/assets/img/background_bleu_fonce_resp.png");
+		background-image: url("../img/background_bleu_fonce_resp.png");
 		background-size: cover;
-		margin-top: 276px;
+		margin-top: 320px;
 		padding-left: 30px;
 		padding-right: 30px;
 		flex-direction: column;
-		height: 595px;
+		height: 681px;
 	}
 
 	.kids_illu {
@@ -295,6 +305,8 @@
 
 	.bottom-contact-left {
 		padding-left: 0;
+		margin-right: auto;
+		margin-left: auto;
 	}
 
 	.bottom-contact-left .p-margin {
@@ -302,7 +314,9 @@
 	}
 
 	.bottom-contact-left p {
-		width: 330px;
+		margin-left: auto;
+		margin-right: auto;
+		width: 290px;
 		letter-spacing: 1px;
 		line-height: 20px;
 	}
@@ -332,27 +346,12 @@
 		height: auto;
 	}
 
-	.bottom-illu {
-		display: none;
-	}
-
-	.bottom-illu-2 {
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
-		margin-bottom: 20px;
-	}
-
 	.middle-info-carousel .slick-track, .middle-info-carousel .slick-list, .middle-info-carousel .slick-slide, .middle-info-carousel .slide {
 		max-height: 530px;
 	}
 
 	.slider-nav-top {
 		display: none;
-	}
-
-	.slider-nav-top-2 {
-		display: block;
 	}
 
 	.slider-nav-2 {
@@ -382,6 +381,7 @@
 
 	.dropdown1, .dropdown2 {
 		display: block;
+		left: 64%;
 	}
 
 	.upper-quote {
@@ -390,9 +390,61 @@
 
 	.resp-p {
 		display: block;
+		left: 76%;
 	}
 
 	.decor-img {
 		display: none;
+	}
+
+	.middle-info-img {
+		max-width: 290px;
+		max-height: 192px;
+	}
+
+	.contact-underline {
+		max-width: 280px;
+	}
+
+	.square-highlight {
+		border: 2px solid #004466;
+		border-radius: 8px;
+		padding: 10px;
+	}
+
+	.sodexo p {
+		margin-left: auto;
+		margin-right: auto;
+	}
+	.bottom-contact {
+		background-image: url("../img/background_bleu_fonce_resp.png");
+	}
+}
+
+@media screen and (max-width: 638px) {
+	.dropdown1, .dropdown2 {
+		display: block;
+		left: 65%;
+	}
+}
+
+@media screen and (max-width: 500px) {
+	.dropdown1, .dropdown2 {
+		display: block;
+		left: 72%;
+	}
+}
+
+@media screen and (max-width: 438px) {
+	.top-info {
+		background-image: url("../img/background_bleu_clair_resp.png");
+	}
+}
+
+
+@media screen and (max-width: 396px) {
+	.dropdown1, .dropdown2 {
+		display: block;
+		left: 76%;
 	}
 }
