--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -33,7 +33,6 @@ body {
 
 .top-nav {
 	height: 83px;
-	margin-bottom: 10px;
 	display: flex;
 	justify-content: space-between;
 	margin-right: 9%;
@@ -121,6 +120,11 @@ body {
 	height: 35vw;
 }
 
+.carousel-top .top-img {
+	-webkit-filter: brightness(0.8);
+    filter: brightness(0.8);
+}
+
 .carousel-top, .top-info-carousel, .slider-nav-top, .middle-info-carousel, .slider-nav {
 	visibility: hidden;
 }
@@ -144,6 +148,10 @@ body {
 	overflow: auto;
 }
 
+.slick-track {
+	min-width: 820px;
+}
+
 .carousel-top .slick-slide {
 	min-height: 513px;
 }
@@ -161,7 +169,7 @@ body {
 
 @media screen and (max-width: 880px) {
 	.carousel-top .slick-dots {
-		bottom: -18px;
+		bottom: -14px;
 	}
 }
 
@@ -283,14 +291,14 @@ body {
 	background-position: 1px -90px;
 	background-repeat: no-repeat;
 	margin-bottom: 20px;
-	height: 672px;
+	height: 780px;
 	padding-bottom: 54px;
 }
 
 @media screen and (max-width: 1420px) {
 	.top-info {
 		height: 710px;
-		background-position: 0px -30px;
+		background-position: 0px -45px;
 	}
 }
 
@@ -301,15 +309,10 @@ body {
 	}
 }
 
-@media screen and (max-width: 1150px) {
+@media screen and (max-width: 1200px) {
 	.top-info {
-		height: 800px;
-	}
-}
-
-@media screen and (max-width: 1000px) {
-	.top-info {
-		height: 850px;
+		height: 670px;
+		background-position: 0px 0px;
 	}
 }
 
@@ -324,8 +327,6 @@ body {
 	text-align: left;
 	margin-top: 0;
 	margin-bottom: 0;
-	margin-left: auto;
-	margin-right: auto;
 	font-family: "house";
 	font-size: 48px;
 	font-weight: lighter;
@@ -337,6 +338,9 @@ body {
 	.top-info-static h1 {
 		font-size: 30px;
 		line-height: 55px;
+	}
+	.top-info {
+		height: 630px;
 	}
 }
 
@@ -351,12 +355,13 @@ body {
 	width: 634px;
 	color: #015078;
 	font-weight: 500;
-	margin-top: 4%;
-	margin-bottom: 2%;
+	margin-top: 1%;
+	margin-bottom: 3%;
 }
 
 .splitter1 {
 	width: 75%;
+	min-width: 510px;
 	text-align: left;
 }
 
@@ -372,15 +377,21 @@ body {
 }
 
 .slider-nav-top {
-	margin-left: 210px;
-	margin-right: 210px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 40px;
 	text-align: center;
 	color: #004466;
+	max-width: 870px;
+}
+
+.nav-top-slider {
+	max-width: 180px;
 }
 
 .nav-top-slider p {
 	margin-right: 20px;
-	width: 140px;
+	max-width: 140px;
 	font-family: "rale";
 	font-size: 28px;
 }
@@ -390,18 +401,6 @@ body {
 	width: 4px;
 	padding-top: 32px;
 	padding-bottom: 20px;
-}
-
-@media screen and (max-width: 1200px) {
-	.nav-top-slider p {
-		margin-left: 5px;
-		font-size: 20px;
-		width: 110px;
-	}
-
-	.nav-top-slider img {
-		height: 30px;
-	}
 }
 
 .slider-nav-top .slick-current p {
@@ -444,7 +443,8 @@ body {
 
 .custom-list {
 	list-style-image: url('../img/tiret-1.png');
-	margin-top: 0;
+	margin-top: 20px;
+	padding-left: 15px;
 }
 
 .custom-list li {
@@ -470,8 +470,8 @@ body {
 }
 
 .middle-info {
-	height: 800px;
-	width: 870px;
+	height: 890px;
+	max-width: 820px;
 	margin-left: auto;
 	margin-right: auto;
 	background-color: white;
@@ -481,9 +481,13 @@ body {
 	text-align: center;
 }
 
+.middle-info-upper img {
+	max-width: 740px;
+}
+
 .middle-info-upper h1 {
 	font-family: "house";
-	font-size: 60px;
+	font-size: 56px;
 	font-weight: lighter;
 	padding: 0;
 	margin: 0;
@@ -495,7 +499,7 @@ body {
 	font-family: "sf";
 	letter-spacing: 1px;
 	width: 518px;
-	font-size: 14px;
+	font-size: 15px;
 	color: #004466;
 }
 
@@ -520,6 +524,7 @@ body {
 
 .middle-info-slide {
 	padding: 20px;
+	max-width: 820px;
 }
 
 .middle-info-left {
@@ -554,12 +559,18 @@ body {
 	margin-bottom: 10px;
 }
 
-.middle-info-left li:hover {
+.square-highlight a{
+	color: #004466;
+	text-decoration: none;
+}
+
+.square-highlight:hover, .square-highlight a:hover {
 	color: #D1423D;
 }
 
 .slider-nav {
 	margin: 10px;
+	max-width: 840px;
 	display: flex;
 }
 
@@ -572,14 +583,19 @@ body {
 	display: flex;
 	flex-direction: column;
 	text-align: center;
-	width: 174px;
+	width: 162px;
 	height: 155px;
 	margin-top: auto;
+}
+
+.slick-current:focus {
+	outline: 0;
 }
 
 .nav-slide p {
 	font-family: "sf";
 	line-height: 12px;
+	min-width: 162px;
 }
 
 /*entreprises centres-c collec ecoles parents*/
@@ -710,9 +726,10 @@ body {
 
 .bottom-contact {
 	margin-top: 30px;
-	height: 571px;
+	height: 725px;
 	background-image: url("../img/background_bleu_fonce.png");
 	background-repeat: no-repeat;
+	background-size: cover;
 	display: flex;
 	flex-direction: row;
 }
@@ -720,6 +737,11 @@ body {
 .bottom-contact-left {
 	padding-left: 128px;
 	padding-top: 68px;
+	margin-left: auto;
+}
+
+.bottom-contact-right {
+	margin-right: auto;
 }
 
 .bottom-contact-left h1 {
@@ -776,21 +798,26 @@ body {
 
 .bottom-illustration {
 	height: 635px;
-	width: 1024px;
+	width: 100%;
+	max-width: 1068px;
 	margin-left: auto;
 	margin-right: auto;
 	background-color: white;
 }
 
-.bottom-illu-2 {
-	display: none;
+.bottom-illu {
+	width: 100%;
+	max-width: 1068px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .bottom-menu {
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
-	padding-bottom: 5px;
+	padding-top: 40px;
+	padding-bottom: 20px;
 }
 
 .bottom-menu a {
@@ -820,6 +847,8 @@ body {
     background-color: transparent;
     background-position: center;
     background-repeat: no-repeat;
+    margin-left: auto;
+    margin-right: auto;
     width: 266px;
     height: 60px;
 }
@@ -833,6 +862,7 @@ body {
     background-color: transparent;
     background-position: center;
     background-repeat: no-repeat;
+    margin-top: 15px;
     margin-bottom: 15px;
     width: 266px;
     height: 60px;
@@ -875,15 +905,17 @@ body {
 .dropdown1 {
 	display: none;
 	position: relative;
-	left: 270px;
+	left: 60%;
 	bottom: 50px;
+	pointer-events: none;
 }
 
 .dropdown2 {
 	display: none;
 	position: relative;
-	left: 270px;
+	left: 63%;
 	bottom: 36px;
+	pointer-events: none;
 }
 
 .dropdown-resp-button {
@@ -981,71 +1013,72 @@ body {
 	display: none;
 }
 
-.decor-slider-1 {
-	background-image: url("../img/middle-carousel/decor_1.png");
-	background-repeat: no-repeat;
-	background-position: center;
-	position: absolute;
-	left: 2%;
-	top: 140%;
-	width: 200px;
-	height: 200px;
+.top-info-container {
+	display: flex;
 }
 
-.decor-slider-2 {
+.deco-left {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	margin-left: auto;
+	position: relative;
+	top: -150px;
+}
+
+.deco-left1 {
+	background-image: url("../img/middle-carousel/decor_1.png");
+	background-repeat: no-repeat;
+	background-position: top;
+	width: 175px;
+	height: 175px;
+}
+
+.deco-left2 {
 	background-image: url("../img/middle-carousel/decor_2.png");
 	background-repeat: no-repeat;
 	background-position: center;
-	position: absolute;
-	left: 2%;
-	top: 180%;
-	width: 200px;
-	height: 200px;
+	width: 175px;
+	height: 175px;
 }
 
-.decor-slider-3 {
+.deco-right {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	margin-right: auto;
+	position: relative;
+	top: -150px;
+}
+
+.deco-right1 {
 	background-image: url("../img/middle-carousel/decor_3.png");
 	background-repeat: no-repeat;
-	background-position: center;
-	position: absolute;
-	right: 2%;
-	top: 140%;
-	width: 200px;
-	height: 200px;
+	background-position: top;
+	width: 175px;
+	height: 175px;
 }
 
-.decor-slider-4 {
+.deco-right2 {
 	background-image: url("../img/middle-carousel/decor_4.png");
 	background-repeat: no-repeat;
 	background-position: center;
-	position: absolute;
-	right: 2%;
-	top: 180%;
-	width: 200px;
-	height: 200px;
+	width: 175px;
+	height: 175px;
 }
 
-@media screen and (max-width: 1200px) {
-	.decor-slider-1 {
-		left: 0%;
-		top: 125%;
-	}
-
-	.decor-slider-2 {
-		left: 0%;
-		top: 165%;
-	}
-
-	.decor-slider-3 {
-		right: 0%;
-		top: 125%;
-	}
-
-	.decor-slider-4 {
-		right: 0%;
-		top: 165%;
-	}
-
+.preloader {
+	position: absolute;
+	top: 0;
+  	background: url("../img/bottom-carousel/picto_collectivites_2.png") no-repeat -9999px -9999px,
+  	url("../img/bottom-carousel/picto_centres_commerciaux_2.png") no-repeat -9999px -9999px,
+    url("../img/bottom-carousel/picto_ecoles_2.png") no-repeat -9999px -9999px,
+    url("../img/bottom-carousel/picto_entreprises_2.png") no-repeat -9999px -9999px,
+    url("../img/bottom-carousel/picto_parents_2.png") no-repeat -9999px -9999px,
+    url("../img/bottom-carousel/btn_contact_rollover.png") no-repeat -9999px -9999px,
+    url("../img/bottom-carousel/btn_activite_rollover.png") no-repeat -9999px -9999px,
+    url("../img/btn_ecrivez_nous_rollover.png") no-repeat -9999px -9999px,
+    url("../img/btn_ecrivez_nous.png") no-repeat -9999px -9999px;
 }
 
 @media screen and (max-width: 1100px) {
@@ -1061,3 +1094,108 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 }
+
+@media screen and (max-width: 1010px){
+	.slider-nav-top-2 {
+		display: block;
+	}
+	.slider-nav-top {
+		display: none;
+	}
+	.dropdown1 {
+		display: block;
+	}
+	.top-info {
+		height: 580px;
+	}
+}
+
+@media screen and (max-width: 820px) {
+	.custom-list p, .custom-list li {
+		width: 300px;
+	}
+	.top-info {
+		height: 600px;
+	}
+}
+
+@media screen and (max-width: 1180px) {
+	.bottom-contact {
+		flex-direction: column;
+	}
+	.illu {
+		display: none;
+	}
+	.bottom-contact-left {
+		margin-left: 5%;
+		margin-right: auto;
+	}
+	.write-us {
+		position: relative;
+		top: -20%;
+		right: -182%;
+	}
+}
+
+@media screen and (max-width: 874px){
+	.slider-nav-2 {
+		display: block;
+	}
+
+	.slider-nav {
+		display: none;
+	}
+
+	.dropdown2 {
+		display: block;
+	}
+	.middle-info-upper h1 {
+		font-size: 50px;
+	}
+	.middle-info {
+		height: 690px;
+	}
+	.write-us {
+		position: initial;
+	}
+	.write-us-button {
+		background-position: center;
+		margin-top: 20px;
+		margin-left: -35%;
+		bottom: 0;
+		top: 0;
+	}
+	.bottom-contact-right {	
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+
+/*@media screen and (max-width: 875px){
+	.slider-nav {
+		display: block;
+	}
+}*/
+
+@media screen and (max-width: 1200px) {
+	.nav-top-slider p {
+		margin-left: 5px;
+		font-size: 20px;
+		width: 110px;
+	}
+
+	.nav-top-slider img {
+		height: 30px;
+	}
+	.deco-right, .deco-left {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 400px) {
+	.dropdown1, .dropdown2 {
+		display: block;
+		left: 76%;
+	}
+}
+
